fix: escape user content to prevent XSS
- Escape previews/analysis/optimized output and titles

- Render toast message via textContent

- Keep selected template on restart

--- a/index.html
+++ b/index.html
@@ -645,12 +645,12 @@
     <script src="assets/js/premium-prompt-engine.js?v=20260223"></script>
     <script src="assets/js/premium-card-generator.js?v=20260223"></script>
     <script src="assets/js/templates.js?v=20260223"></script>
-    <script src="assets/js/content-optimizer.js?v=20260225_1"></script>
+    <script src="assets/js/content-optimizer.js?v=20260225_2"></script>
     <script src="assets/js/visual-generator.js?v=20260225_7"></script>
-    <script src="assets/js/preview-system.js?v=20260225_2"></script>
+    <script src="assets/js/preview-system.js?v=20260225_4"></script>
     <script src="assets/js/performance-optimizer.js?v=20260223"></script>
-    <script src="assets/js/ui.js?v=20260223"></script>
-    <script src="assets/js/generator.js?v=20260225_3"></script>
+    <script src="assets/js/ui.js?v=20260225_1"></script>
+    <script src="assets/js/generator.js?v=20260225_4"></script>
     <script src="assets/js/app.js?v=20260223"></script>
 </body>
 </html>
